<resources>
    <string name="app_name">Library App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account_register">Don’t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="search_hint">Search books, authors…</string>
    <string name="reserve">Reserve</string>
    <string name="bookmark">Bookmark</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="notifications">Enable Notifications</string>
    <string name="no_bookmarks_yet">No bookmarks yet.</string>
    <string name="no_reservations_yet">No reservations yet.</string>
    <string name="no_books_found">No books found.</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="description">Description…</string>
    <string name="resource_title">Resource Title</string>
    <string name="author_publisher">Author / Publisher</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title">Title</string>
    <string name="author_type">Author / Type</string>
    <string name="avatar">Avatar</string>
    <string name="download">Download\n</string>
    <string name="unavailable">Unavailable</string>
    <string name="search">Search</string>
    <string name="enter_search_term">Please enter a search term</string>
    <string name="no_reservations">You have no reservations yet.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="availability">Availability</string>
    <string name="bookmark_added">Bookmark Added.</string>
    <string name="error_occurred">Error Occurred.</string>
    <string name="bookmark_deleted">Bookmark Deleted.</string>
    <string name="save">Save</string>
</resources>